# monorepo

./: .bazelrc  .gitignore  README.md  WORKSPACE
hello-world/: BUILD.bazel
