load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
)

haskell_toolchain_library(name = "base")

haskell_binary(
    name = "hello",
    srcs = ["Hello.hs"],
    deps = [":base"]
)

haskell_binary(
    name = "example",
    srcs = [":Example.hs"],
    deps = [":base", "@stackage//:zlib"],
)
